Fix overflow bug

--- a/src/SimpleBet/Client/app/betCreator/betCreator.css
+++ b/src/SimpleBet/Client/app/betCreator/betCreator.css
@@ -2,13 +2,15 @@
     margin: 50px auto;
     position: fixed;
     top: 0; left: 0;
-    height: 100%;
+    height: calc(100% - 50px);
     width: 100%;
     z-index: 1;
+    overflow: scroll;
 }
 
 #betCreator [ui-view] {
     height: 100%;
+    overflow: scroll;
 }
 
 #betCreator #appBottomNavbar {
